[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "udon-deckgen"
authors = [
  {name = "alfa0112", email = "syana.and.yuji@gmail.com"}
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyudon>=0.2.1"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "udon_deckgen.__version__.__version__"}

[project.scripts]
udon-deckgen = "udon_deckgen.__main__:main"
